--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,6 @@ django-ckeditor==6.7.3
 django-crispy-forms==2.5
 crispy-bootstrap5==2025.6
 django-js-asset==3.1.2
-environs==8.0.0
 gunicorn==25.0.3
 packaging==26.0
 pillow==12.1.0
@@ -15,4 +14,7 @@ psycopg2-binary==2.9.11
 python-dotenv==1.2.1
 sqlparse==0.5.5
 tzdata==2025.3
+environs==9.5.0
+marshmallow==3.21.1
+
 
